# bevy_flurx_wry

./: .gitignore  CHANGELOG.md  Cargo.toml  README.MD  README.md
crates/api/: Cargo.toml  README.md
crates/api/src/: api.rs  app.rs  clipboard.rs  dialog.rs  error.rs  fs.rs  http.rs  lib.rs  log.rs  monitor.rs  notification.rs  os.rs  path.rs  web_window.rs  window.rs
crates/api/src/api/: app.rs  mouse.rs
crates/api/src/dialog/: open.rs  save.rs
crates/api/src/fs/: copy_file.rs  create_dir.rs  exists.rs  read_dir.rs  read_file.rs  read_text_file.rs  remove_dir.rs  remove_file.rs  rename_file.rs  write_file.rs
crates/api/src/monitor/: available_monitors.rs  availables.rs  current.rs  current_monitor.rs  primary.rs
crates/api/src/os/: family.rs  host_name.rs  kernel_version.rs  locale.rs  os_version.rs  system_name.rs
crates/api/src/web_window/: center.rs  create.rs  focus.rs  hide.rs  inner_position.rs  inner_size.rs  is_decorated.rs  is_focused.rs  is_fullscreen.rs  is_maximizable.rs  is_maximized.rs  is_minimizable.rs  is_minimized.rs  is_resizable.rs  is_visible.rs  maximize.rs  minimize.rs  outer_position.rs  set_cursor_hit_test.rs  set_decorations.rs  set_position.rs  set_window_mode.rs  show.rs  title.rs  un_focus.rs  un_maximize.rs  un_minimize.rs  unfocus.rs
crates/api/src/window/: available_monitors.rs  current_monitor.rs
crates/bevy_flurx_api/: CHANGELOG.md  Cargo.toml  README.md
crates/bevy_flurx_api/src/: app.rs  clipboard.rs  dialog.rs  error.rs  fs.rs  http.rs  lib.rs  log.rs  monitor.rs  notification.rs  os.rs  path.rs  web_window.rs
crates/bevy_flurx_api/src/dialog/: open.rs  save.rs
crates/bevy_flurx_api/src/fs/: copy_file.rs  create_dir.rs  exists.rs  read_dir.rs  read_file.rs  remove_dir.rs  remove_file.rs  rename_file.rs  write_file.rs
crates/bevy_flurx_api/src/monitor/: availables.rs  current.rs  primary.rs
crates/bevy_flurx_api/src/os/: family.rs  host_name.rs  kernel_version.rs  locale.rs  os_version.rs  system_name.rs
crates/bevy_flurx_api/src/web_window/: center.rs  create.rs  focus.rs  hide.rs  inner_position.rs  inner_size.rs  is_decorated.rs  is_focused.rs  is_fullscreen.rs  is_maximizable.rs  is_maximized.rs  is_minimizable.rs  is_minimized.rs  is_resizable.rs  is_visible.rs  maximize.rs  minimize.rs  outer_position.rs  set_cursor_hit_test.rs  set_decorations.rs  set_position.rs  set_window_mode.rs  show.rs  title.rs  un_focus.rs  un_maximize.rs  un_minimize.rs
crates/bevy_flurx_ipc/: Cargo.toml  README.md
crates/bevy_flurx_ipc/src/: component.rs  ipc_commands.rs  lib.rs
crates/bevy_flurx_ipc/tests/: test01_action_command.rs  test02_async_command.rs  test03_custom_id.rs  test04_return_result.rs
crates/bevy_flurx_ipc_macro/: Cargo.toml
crates/bevy_flurx_ipc_macro/src/: command.rs  lib.rs
crates/bevy_flurx_ipc_macro/src/command/: action_command.rs  async_command.rs
crates/bevy_webview_core/: Cargo.toml
crates/bevy_webview_core/src/: bundle.rs  lib.rs
crates/bevy_webview_core/src/bundle/: embedding.rs  webview.rs
crates/bevy_webview_core/src/bundle/embedding/: bounds.rs  resize.rs
crates/bevy_webview_core/src/bundle/webview/: auto_play.rs  background.rs  browser_accelerator_keys.rs  enable_clipboard.rs  event_emitter.rs  focused.rs  hotkeys_zoom.rs  incognito.rs  initialization_script.rs  is_open_devtools.rs  theme.rs  user_agent.rs  visible.rs  webview_uri.rs
crates/bevy_webview_wry/: CHANGELOG.md  Cargo.toml  README.md
crates/bevy_webview_wry/scripts/: bevy_flurx_api.js  gripZone.js  gripZoneOnLinux.js
crates/bevy_webview_wry/src/: common.rs  embedding.rs  lib.rs  util.rs  webview.rs
crates/bevy_webview_wry/src/common/: bundle.rs
crates/bevy_webview_wry/src/embedding/: bundle.rs  grip_zone.rs  plugin.rs  resize.rs
crates/bevy_webview_wry/src/webview/: devtools.rs  event_emitter.rs  handlers.rs  ipc_resolve.rs  linux.rs  load_webview.rs  visible.rs
crates/core/: Cargo.toml  README.md
crates/core/scripts/: api.js  gripZone.js  windowIdentifier.js
crates/core/src/: as_child.rs  common.rs  lib.rs  util.rs
crates/core/src/as_child/: bundle.rs  plugin.rs
crates/core/src/as_child/bundle/: bounds.rs  (+3 more)
crates/core/src/common/: bundle.rs  plugin.rs
crates/ipc/: Cargo.toml  README.md
crates/ipc/src/: component.rs  ipc_command_queue.rs  ipc_commands.rs  ipc_events.rs  lib.rs  plugin.rs
crates/ipc/tests/: index.rs  test01_action_command.rs  test01_construct_ipc_handler.rs  test02_async_command.rs  test02_with_inputs.rs  test03_custom_id.rs  test03_ipc_handlers_macro.rs  test04_async_command.rs  test04_return_result.rs  test05_async_command_with_inputs.rs  test06_custom_id.rs  test07_return_result.rs
crates/ipc_macro/: Cargo.toml
crates/ipc_macro/src/: command.rs  lib.rs
crates/ipc_macro/src/command/: action_command.rs  async_command.rs
crates/ultralight_2d/: Cargo.toml
crates/ultralight_2d/examples/: count_up.rs
crates/ultralight_2d/src/: bundle.rs  lib.rs  plugin.rs
crates/ultralight_2d/src/bundle/: uri.rs  view_size.rs
crates/ultralight_2d/src/plugin/: initialize.js  ipc.rs  keyboard.rs  mouse.rs  render.rs  setup_view.rs
crates/wry/: Cargo.toml
crates/wry/examples/: api.rs  count_up.rs  devtools.rs  event_emit.rs
crates/wry/scripts/: api.js  childWindow.js  mouse.js  toolbar.js
crates/wry/src/: api.rs  as_child.rs  bundle.rs  core.rs  lib.rs  plugin.rs
crates/wry/src/as_child/: bounds.rs  bundle.rs  plugin.rs  resize_mode.rs
crates/wry/src/bundle/: auto_play.rs  enable_clipboard.rs  event_emitter.rs  focused.rs  hotkeys_zoom.rs  incognito.rs  is_open_devtools.rs  on_page_load.rs  theme.rs  user_agent.rs  visible.rs  webview_uninitialized.rs
crates/wry/src/core/: bundle.rs  plugin.rs
crates/wry/src/plugin/: api.rs  create_webview.rs  devtools.rs  event.rs  initialize.js  ipc.rs  load.rs  on_page_load.rs  visible.rs
examples/bug_check/: Cargo.toml
examples/bug_check/src/: main.rs
examples/ipc/: Cargo.toml  simple.rs
examples/wry/: Cargo.toml  child_window.rs  embedding.rs  embedding_html.rs  event_emit.rs  event_listen.rs  ipc_command.rs  simple.rs
(+212 files in other folders)
