[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples/*",
]
exclude = [
    "tool",
]

[workspace.dependencies]
bevy = { version = "0.15.0", default-features = false }
bevy_flurx = { version = "0.9" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

[workspace.lints.rust]
missing_docs = "warn"


