[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples/*",
]
exclude = [
    "tool",
]

[workspace.dependencies]
bevy = { version = "0.15", default-features = false }
bevy_flurx = { version = "0.9" }
bevy_flurx_ipc = { path = "crates/bevy_flurx_ipc", version = "0.1.0" }
bevy_flurx_ipc_macro = { path = "crates/bevy_flurx_ipc_macro", version = "0.1.0" }
bevy_webview_wry = { path = "crates/bevy_webview_wry", version = "0.2.0" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

[workspace.lints.rust]
missing_docs = "warn"


