[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples/*",
]
exclude = [
    "tool",
]

[workspace.dependencies]
bevy = { version = "0.15", default-features = false }
bevy_flurx = { version = "0.9" }
bevy_flurx_ipc = { path = "crates/bevy_flurx_ipc", version = "0.1" }
bevy_flurx_ipc_macro = { path = "crates/bevy_flurx_ipc_macro", version = "0.1" }
bevy_webview_core = { path = "crates/bevy_webview_core", version = "0.1" }
bevy_webview_wry = { path = "crates/bevy_webview_wry", version = "0.2" }
bevy_flurx_api = { path = "crates/bevy_flurx_api", version = "0.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

[workspace.lints.rust]
missing_docs = "warn"


