[package]
name = "bevy_flurx_wry_api"
version = "0.1.0-alpha1"
edition = "2021"
description = "Provides the api plugins for bevy_flurx_wry"
authors = ["elm"]
repository = "https://github.com/not-elm/bevy_flurx_wry"
categories = ["game-development"]
keywords = ["game", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = []
clipboard = ["dep:arboard"]

[dependencies]
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_flurx = { workspace = true }
bevy_reflect = { workspace = true }
bevy_flurx_ipc = { path = "../ipc", version = "0.1.0-alpha1" }
bevy_flurx_wry_core = { path = "../core", version = "0.1.0-alpha1" }
serde = { workspace = true }
dirs = "5.0.1"
arboard = { version = "3.4.1", optional = true }

[dev-dependencies]
bevy = "0.15.0"
bevy_flurx_wry = { path = "../../." }

[lints]
workspace = true
