[package]
name = "bevy_flurx_api"
version = "0.1.0-alpha1"
edition = "2021"
description = "Provides the api plugins for bevy_flurx_wry"
authors = ["elm"]
repository = "https://github.com/not-elm/bevy_flurx_wry"
categories = ["game-development"]
keywords = ["game", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = []
fs = ["dep:dirs"]
clipboard = ["dep:arboard"]
dialog = ["dep:rfd", "fs"]
notification = ["dep:notify-rust"]
os = ["dep:sysinfo", "dep:sys-locale"]
monitor = []
window = ["dep:winit", "dep:bevy_flurx_wry"]
http = ["bevy_flurx/tokio", "bevy_flurx/effect", "dep:reqwest"]

[dependencies]
bevy = { workspace = true }
bevy_flurx = { workspace = true }
bevy_flurx_ipc = { path = "../ipc", version = "0.1.0-alpha1" }
bevy_flurx_wry = { path = "../bevy_flurx_wry", version = "0.1.0-alpha1", optional = true }
serde = { workspace = true }
dirs = { version = "6.0.0", optional = true }
arboard = { version = "3.4.1", optional = true }
rfd = { version = "0.15", default-features = false, optional = true }
notify-rust = { version = "4.11.3", optional = true }
sysinfo = { version = "0.33.0", optional = true }
sys-locale = { version = "0.3.2", optional = true }
winit = { version = "0.30.5", features = ["serde"], optional = true }
reqwest = { version = "0.12.11", features = ["json"], optional = true }

[dev-dependencies]
bevy = "0.15.0"
bevy_flurx_wry = { path = "../bevy_flurx_wry" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

