[package]
name = "bevy_flurx_ipc"
version = "0.1.0"
edition = "2021"
description = "provides a way for ipc communication using bevy_flurx"
authors = ["notelm <elmprograminfo@gmail.com>"]
repository = "https://github.com/not-elm/bevy_webview_projects"
categories = ["game-development"]
keywords = ["game", "gamedev", "bevy", "ipc", "async"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[[test]]
name = "progress"
path = "tests/index.rs"

[dependencies]
bevy = { workspace = true, features = ["serialize"] }
bevy_flurx_ipc_macro = { workspace = true }
bevy_flurx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
trybuild = "1"
bevy = "0.15"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]