[package]
name = "bevy_flurx_ipc_macro"
version = "0.1.0"
edition = "2021"
authors = ["elm"]
repository = "https://github.com/not-elm/bevy_webview_projects"
categories = ["game-development"]
keywords = ["game", "gamedev", "bevy", "ipc"]
description = "provide ipc-command macro for bevy_flurx_ipc"
license = "MIT OR Apache-2.0"
readme = "../bevy_webview_wry/README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.82"
syn = { version = "2.0.63", features = ["full", "extra-traits"] }
quote = "1.0.36"
darling = { version = "0.20.10" }
bevy = { version = "0.15.0", default-features = false, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
bevy = { version = "0.15.0", default-features = false }
bevy_flurx = { workspace = true }
bevy_flurx_ipc = { path = "../bevy_flurx_ipc" }
serde = { workspace = true }

[features]
default = []
doc = ["dep:bevy", "dep:serde"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]