[package]
name = "bevy_webview_core"
version = "0.1.0"
edition = "2021"
authors = ["notelm <elmprograminfo@gmail.com>"]
description = "Provides webview's core logic for bevy_webview_projects"
repository = "https://github.com/not-elm/bevy_webview_projects"
categories = ["gui", "game-development"]
keywords = ["game", "gamedev", "bevy", "wry"]
license = "MIT OR Apache-2.0"
readme = "../../README.MD"

[dependencies]
bevy = { workspace = true }
bevy_flurx_ipc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
bevy_webview_wry = { workspace = true }

[lints]
workspace = true
