[package]
name = "bevy_webview_wry"
version = "0.1.0"
edition = "2021"
authors = ["elm"]
description = "Provides a mechanism to create a webview based on wry"
repository = "https://github.com/not-elm/bevy_webview_projects"
categories = ["gui", "game-development"]
keywords = ["game", "gamedev", "bevy", "wry"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bevy = { workspace = true, features = [
    "bevy_winit",
    "bevy_window",
    "bevy_color",
    "serialize",
] }
wry = { version = "0.48.0", features = ["transparent"] }
bevy_flurx_ipc = { path = "../bevy_flurx_ipc", version = "0.1.0" }
bevy_flurx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mouse-rs = "0.4.2"
rand = "0.8.5"

[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
objc2 = { version = "0.5" }
objc2-app-kit = { version = "0.2.0", features = [
    "NSApplication",
    "NSEvent",
    "NSWindow",
    "NSView",
    "NSPasteboard",
    "NSPanel",
    "NSResponder",
    "NSOpenPanel",
    "NSSavePanel",
    "NSMenu",
    "NSGraphics",
    "NSTrackingArea",
] }
objc2-foundation = { version = "0.2.0" }

[dev-dependencies]
bevy = "0.15.0"
bevy_flurx = { workspace = true }
bevy_flurx_ipc = { path = "../bevy_flurx_ipc" }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]