[package]
name = "bevy_webview_wry"
version = "0.2.0"
edition = "2021"
authors = ["notelm <elmprograminfo@gmail.com>"]
description = "Allows you to create a webview based on wry"
repository = "https://github.com/not-elm/bevy_webview_projects"
categories = ["gui", "game-development"]
keywords = ["game", "gamedev", "bevy", "wry"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["child_window", "api"]
child_window = ["dep:bevy_child_window"]
api = ["dep:bevy_flurx_api"]

[dependencies]
bevy = { workspace = true, features = [
    "bevy_winit",
    "bevy_window",
    "bevy_color",
    "serialize",
] }
bevy_flurx = { workspace = true }
bevy_webview_core = { workspace = true }
bevy_flurx_ipc = { workspace = true }
bevy_flurx_api = { workspace = true, optional = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.9"
bevy_child_window = { version = "0.1", optional = true }

[target.'cfg(any(target_os="ios", target_os="macos"))'.dependencies]
objc2 = { version = "0.5" }
objc2-app-kit = { version = "0.2.0", features = [
    "NSApplication",
    "NSEvent",
    "NSWindow",
    "NSView",
    "NSPanel",
    "NSResponder",
] }
objc2-foundation = { version = "0.2.0" }

[dependencies.wry]
version = "0.48"
features = [
    "transparent",
    "linux-body",
]

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
gtk = { version = "0.18" }
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }

[dev-dependencies]
bevy = "0.15.0"
bevy_flurx = { workspace = true }
bevy_flurx_ipc = { path = "../bevy_flurx_ipc" }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]