[package]
name = "bevy_flurx_wry_core"
version = "0.1.0-alpha1"
description = "The core crate of bevy_flurx_wry"
edition = "2021"
authors = ["elm"]
repository = "https://github.com/not-elm/bevy_flurx_wry"
categories = ["gui", "game-development"]
keywords = ["game", "gamedev", "bevy", "wry"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_ui"
] }
bevy_window = { workspace = true }
wry = { version = "0.39.5" }
bevy_flurx_ipc = { path = "../ipc", version = "0.1.0-alpha1" }
bevy_flurx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mouse-rs = "0.4.2"

[dev-dependencies]
bevy = "0.15.0"
bevy_flurx_wry = { path = "../.." }

[lints]
workspace = true