[package]
name = "bevy_flurx_wry_core"
version = "0.1.0-alpha1"
description = "The core crate of bevy_flurx_wry"
edition = "2021"
authors = ["elm"]
repository = "https://github.com/not-elm/bevy_flurx_wry"
categories = ["gui", "game-development"]
keywords = ["game", "gamedev", "bevy", "wry"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[dependencies]
bevy = { workspace = true }
wry = { path = "../../../wry", features = ["transparent"] }
bevy_flurx_ipc = { path = "../ipc", version = "0.1.0-alpha1" }
bevy_flurx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mouse-rs = "0.4.2"
rand = "0.8.5"

[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
objc2 = { version = "0.5" }
objc2-app-kit = { version = "0.2.0", features = [
    "NSApplication",
    "NSEvent",
    "NSWindow",
    "NSView",
    "NSPasteboard",
    "NSPanel",
    "NSResponder",
    "NSOpenPanel",
    "NSSavePanel",
    "NSMenu",
    "NSGraphics"
] }
objc2-foundation = { version = "0.2.0" }

[dev-dependencies]
bevy = "0.15.0"
bevy_flurx_wry = { path = "../.." }

[lints]
workspace = true