[package]
name = "bevy_flurx_ipc"
version = "0.1.0-alpha1"
edition = "2021"
description = "provides a way for ipc communication using bevy_flurx"
authors = ["elm"]
repository = "https://github.com/not-elm/bevy_flurx_wry"
categories = ["game-development"]
keywords = ["game", "gamedev", "bevy", "ipc"]
license = "MIT OR Apache-2.0"
readme = "../bevy_flurx_wry/README.md"

[[test]]
name = "progress"
path = "tests/index.rs"

[dependencies]
bevy = { workspace = true }
bevy_flurx_ipc_macro = { path = "../ipc_macro", version = "0.1.0-alpha1" }
bevy_flurx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
trybuild = "1.0.96"
bevy = "0.15.0"
bevy_flurx_wry = { path = "../bevy_flurx_wry" }

[lints]
workspace = true

[package.metadata.doc.rs]
worskpace = true