[package]
name = "bevy_flurx_ipc_macro"
version = "0.1.0-alpha1"
edition = "2021"
authors = ["elm"]
repository = "https://github.com/not-elm/bevy_flurx_wry"
categories = ["game-development"]
keywords = ["game", "gamedev", "bevy", "ipc"]
description = "provide ipc-command macro for bevy_flurx_ipc"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.82"
syn = { version = "2.0.63", features = ["full", "extra-traits"] }
quote = "1.0.36"
deluxe = { version = "0.5.0" }

[dev-dependencies]
bevy = { version = "0.13.2", default-features = false }
bevy_flurx_ipc = { path = "../ipc" }
bevy_flurx = { workspace = true }

[lints]
workspace = true