[package]
name = "ultralight_2d"
version = "0.1.0"
edition = "2021"

[dependencies]
ul-next = "0.2.0"
bevy = { version = "0.13.2", default-features = false, features = [
    "bevy_render",
] }
bevy_flurx_ipc = { path = "../ipc" }
bevy_flurx = { workspace = true }
tiny_http = "0.12.0"
serde = { workspace = true }
serde_json = { workspace = true }


[dev-dependencies]
bevy = "0.13.2"
bevy_panorbit_camera = "0.18.1"
bevy-inspector-egui = "0.24.0"