[package]
name = "bug_check"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy = "0.15.0"
bevy_flurx = "0.7.0"
bevy_flurx_wry = { path = "../..",  features = [
    "clipboard",
    "fs",
]}
bevy-inspector-egui = "0.28.0"
serde = { version = "1.0.202", features = ["derive"] }

[lints]
workspace = true
