[package]
name = "examples_bevy_flurx_ipc"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[dev-dependencies]
bevy = { workspace = true, default-features = true }
bevy_flurx = { workspace = true }
bevy_flurx_ipc = { path = "../../crates/bevy_flurx_ipc" }

[[example]]
name = "ipc_simple"
path = "simple.rs"