[package]
name = "examples_bevy_webview_wry"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[dev-dependencies]
bevy = { workspace = true, default-features = true }
bevy_flurx = { workspace = true }
bevy_flurx_ipc = { path = "../../crates/bevy_flurx_ipc" }
bevy_flurx_api = { path = "../../crates/bevy_flurx_api", features = [
    "web_window",
] }
bevy_webview_wry = { path = "../../crates/bevy_webview_wry" }
serde_json = { workspace = true }
serde = { workspace = true }
bevy_child_window = { version = "0.1.0" }


[[example]]
name = "wry_child_window"
path = "child_window.rs"

[[example]]
name = "wry_simple"
path = "simple.rs"

[[example]]
name = "wry_ipc_command"
path = "ipc_command.rs"

[[example]]
name = "wry_event_emit"
path = "event_emit.rs"

[[example]]
name = "wry_event_listen"
path = "event_listen.rs"

[[example]]
name = "wry_embedding"
path = "embedding.rs"

[[example]]
name = "wry_embedding_html"
path = "embedding_html.rs"